Jeff fixed serch alignment

--- a/src/Components/Community/style.css
+++ b/src/Components/Community/style.css
@@ -1,7 +1,5 @@
 .searchbar{
-    /*justify-content: center;*/
-    /*text-align: center;*/
-    /*position: fixed;*/
-    left: 50%;
-    right: 50%;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
